# BallisticsCalculator

./: .gitignore  BallisticsCalculator.sln  CMakeLists.txt  README.md
Ballistics/: Ballistics.vcxproj  Ballistics.vcxproj.filters  CMakeLists.txt
Ballistics/include/: Algebra.h  Ballistics.h  BulletData.h  Data.h  Plotter.h  Solver.h  Ui.h
Ballistics/source/: Ballistics.cpp  BulletData.cpp  Data.cpp  Plotter.cpp  Ui.cpp
BallisticsCalculator/: Application.cpp  Application.h  BallisticsCalculator.cpp  BallisticsCalculator.h  BallisticsCalculator.vcxproj  BallisticsCalculator.vcxproj.filters  CMakeLists.txt  Curves.h  Data.cpp  main.cpp
MathLib/: CMakeLists.txt  MathLib.cpp  MathLib.vcxproj  MathLib.vcxproj.filters
MathLib/include/: Algebra.h  Curves.h  Maths.h
Tests/: CMakeLists.txt  Tests.cpp  Tests.vcxproj
UiLib/: CMakeLists.txt  UiLib.vcxproj  UiLib.vcxproj.filters
UiLib/include/: Algebra.h  Curves.h  Plotter.h
UiLib/source/: Plotter.cpp
